<resources>
  <string name="CodeHasExpired">Your PIN has expired.</string>
  <string name="Enter_your_mobile_number_label">Enter your mobile number</string>
  <string name="IssueFooter">We may contact you for further details about your feedback. Your email address won’t be used for any other purpose.</string>
  <string name="NotificationsBlurbLink">Change notifications settings</string>
  <string name="NotificationsDisabledBlurb">You will not receive a notification if COVIDSafe is not active.\nChange notifications settings</string>
  <string name="NotificationsEnabledBlurb">You will receive a notification if COVIDSafe is not active.\nChange notifications settings</string>
  <string name="PINNumber_VO_Label">PIN number</string>
  <string name="PN_MobileNumber_VOLabel">Mobile number</string>
  <string name="ReceivePinIssue">Issues receiving your PIN?</string>
  <string name="Select_country_or_region_headline">Select country or region</string>
  <string name="action_continue">Continue</string>
  <string name="action_report_an_issue">Report an issue</string>
  <string name="action_upload_done">Done</string>
  <string name="action_verify_invalid_pin">Invalid PIN, please ask the health official to send you another PIN.</string>
  <string name="action_verify_upload_pin">Upload my information</string>
  <string name="active_cases">Active cases (estimated)</string>
  <string name="activity_button">Check app activity</string>
  <string name="activity_button_description">View your app\'s Bluetooth interactions with other COVIDSafe users.</string>
  <string name="activity_heading">App activity</string>
  <string name="activity_intro">When your device is in Bluetooth range of other COVIDSafe app users, it takes note of Bluetooth interactions called <a href="https://www.covidsafe.gov.au/technology.html#handshakes">digital \'handshakes\'</a>.\n\nThese handshakes give an indication of how well your app is working.</string>
  <string name="activity_intro_2">The number of handshakes shows you were in close range with another COVIDSafe user. It does NOT mean that you have been in contact with a user who has tested positive for COVID-19.</string>
  <string name="activity_self_isolation_button">Continue</string>
  <string name="app_activity_bluetooth_handshakes_heading">Bluetooth handshakes recorded by your device:</string>
  <string name="australian_capital_territory">Australian Capital Territory</string>
  <string name="battery_optimisation_prompt">You must disable battery optimisation.</string>
  <string name="ble_handshakes_yesterday">Bluetooth handshakes recorded by your device yesterday</string>
  <string name="bluetooth_handshakes_android">Bluetooth handshakes</string>
  <string name="cancel_snooze">Cancel snooze</string>
  <string name="cases_28_days">New cases in the last 28 days</string>
  <string name="cases_7_days">New cases in the last 7 days</string>
  <string name="change_device_name_content_line_1">The current name of your device is %s.</string>
  <string name="change_device_name_content_line_2">Other Bluetooth® devices around you will be able to see the name of your device. We recommend to use a device name that does not contain your personal details and is commonly used, such as your device model.</string>
  <string name="change_device_name_default_device_name">%s</string>
  <string name="change_device_name_headline">Your device name</string>
  <string name="change_device_name_headline_content_description">Heading, Your device name</string>
  <string name="change_device_name_new_device_name">Edit device name</string>
  <string name="change_device_name_primary_action">Continue</string>
  <string name="change_device_name_secondary_action">Skip and keep as it is</string>
  <string name="change_language">Change language</string>
  <string name="change_language_content">Read the guide on using COVIDSafe in a different language.</string>
  <string name="change_postcode_description">Update if your postcode has changed since downloading COVIDSafe.</string>
  <string name="change_postcode_heading">Change your postcode</string>
  <string name="change_postcode_intro">Have you moved to a different postcode area since you registered to use COVIDSafe? \n\nKeeping your postcode up to date can assist health officials to undertake contact tracing.  \n\nRead the *COVIDSafe privacy policy* and *collection notice* for further details about how your information is stored and shared.</string>
  <string name="collection_message">COVIDSafe now collects diagnostic information to help you troubleshoot issues with your App. *Learn more*</string>
  <string name="consent_button">I agree</string>
  <string name="consent_call_for_action">Select \'I agree\' to confirm consent.</string>
  <string name="country_region_name_ad">Andorra</string>
  <string name="country_region_name_ae">United Arab Emirates</string>
  <string name="country_region_name_af">Afghanistan</string>
  <string name="country_region_name_ag">Antigua and Barbuda</string>
  <string name="country_region_name_ai">Anguilla</string>
  <string name="country_region_name_al">Albania</string>
  <string name="country_region_name_am">Armenia</string>
  <string name="country_region_name_an">Netherlands Antilles</string>
  <string name="country_region_name_ao">Angola</string>
  <string name="country_region_name_ar">Argentina</string>
  <string name="country_region_name_at">Austria</string>
  <string name="country_region_name_au">Australia</string>
  <string name="country_region_name_au2">Norfolk Island</string>
  <string name="country_region_name_aw">Aruba</string>
  <string name="country_region_name_az">Azerbaijan</string>
  <string name="country_region_name_ba">Bosnia and Herzegovina</string>
  <string name="country_region_name_bb">Barbados</string>
  <string name="country_region_name_bd">Bangladesh</string>
  <string name="country_region_name_be">Belgium</string>
  <string name="country_region_name_bf">Burkina Faso</string>
  <string name="country_region_name_bg">Bulgaria</string>
  <string name="country_region_name_bh">Bahrain</string>
  <string name="country_region_name_bi">Burundi</string>
  <string name="country_region_name_bj">Benin</string>
  <string name="country_region_name_bm">Bermuda</string>
  <string name="country_region_name_bn">Brunei</string>
  <string name="country_region_name_bo">Bolivia</string>
  <string name="country_region_name_br">Brazil</string>
  <string name="country_region_name_bs">Bahamas</string>
  <string name="country_region_name_bt">Bhutan</string>
  <string name="country_region_name_bw">Botswana</string>
  <string name="country_region_name_by">Belarus</string>
  <string name="country_region_name_bz">Belize</string>
  <string name="country_region_name_ca">Canada</string>
  <string name="country_region_name_cd">Democratic Republic of the Congo</string>
  <string name="country_region_name_cf">Central African Republic</string>
  <string name="country_region_name_cg">Republic of the Congo</string>
  <string name="country_region_name_ch">Switzerland</string>
  <string name="country_region_name_ci">Ivory Coast</string>
  <string name="country_region_name_ck">Cook Islands</string>
  <string name="country_region_name_cl">Chile</string>
  <string name="country_region_name_cm">Cameroon</string>
  <string name="country_region_name_cn">China</string>
  <string name="country_region_name_co">Colombia</string>
  <string name="country_region_name_cr">Costa Rica</string>
  <string name="country_region_name_cu">Cuba</string>
  <string name="country_region_name_cv">Cape Verde</string>
  <string name="country_region_name_cw">Curaçao</string>
  <string name="country_region_name_cy">Cyprus</string>
  <string name="country_region_name_cz">Czech Republic</string>
  <string name="country_region_name_de">Germany</string>
  <string name="country_region_name_dj">Djibouti</string>
  <string name="country_region_name_dk">Denmark</string>
  <string name="country_region_name_dm">Dominica</string>
  <string name="country_region_name_do">Dominican Republic</string>
  <string name="country_region_name_dz">Algeria</string>
  <string name="country_region_name_ec">Ecuador</string>
  <string name="country_region_name_ee">Estonia</string>
  <string name="country_region_name_eg">Egypt</string>
  <string name="country_region_name_es">Spain</string>
  <string name="country_region_name_et">Ethiopia</string>
  <string name="country_region_name_fi">Finland</string>
  <string name="country_region_name_fj">Fiji</string>
  <string name="country_region_name_fo">Faroe Islands</string>
  <string name="country_region_name_fr">France</string>
  <string name="country_region_name_ga">Gabon</string>
  <string name="country_region_name_gb">United Kingdom</string>
  <string name="country_region_name_gd">Grenada</string>
  <string name="country_region_name_ge">Georgia</string>
  <string name="enter_pin_headline" formatted="false">Enter the PIN sent to %s %s</string>
  <string name="enter_pin_resend_pin">Resend PIN</string>
  <string name="enter_pin_timer_expire">Your PIN will expire in</string>
  <string name="enter_pin_wrong_number">Is this mobile number wrong?</string>
  <string name="home_app_permission_status_subtitle">COVIDSafe won\'t work without the right settings. </string>
  <string name="home_bluetooth_permission">Bluetooth®: %s</string>
  <string name="home_header_inactive_title">COVIDSafe is not active</string>
  <string name="home_location_permission">Location: %s</string>
  <string name="home_non_battery_optimization_permission">Battery optimisation: %s</string>
  <string name="internet_screen_content">COVIDSafe needs to connect to the server from time to time to ensure it can identify issues with the app.\n\nConnecting to the internet ensures you receive notifications on:</string>
  <string name="internet_screen_content_1">how to fix issues and set COVIDSafe active again</string>
  <string name="internet_screen_content_2">when a new version update is available</string>
  <string name="internet_screen_heading">Connect to the internet to improve the performance of COVIDSafe</string>
  <string name="jwt_description">There is an issue with your registration details.</string>
  <string name="jwt_heading">Please register again</string>
  <string name="navigation_back_button_content_description">Previous page</string>
  <string name="pin_number">pin number</string>
  <string name="registration_consent_content">I consent to the Department of Health as data store administrator, under the <i>Privacy Act 1988</i>, collecting:</string>
  <string name="registration_consent_diagnostic">information to ensure that COVIDSafe is working properly on my device.</string>
  <string name="registration_consent_first_paragraph">registration information,</string>
  <string name="registration_consent_headline">Registration consent</string>
  <string name="registration_consent_second_paragraph">information about my contact with other COVIDSafe users, if another user I have come into contact with tests positive for COVID-19 and uploads their contact data, and</string>
  <string name="upload_step_4_header"> Upload consent</string>
  <string name="upload_step_4_header_content_description">Heading, Upload consent</string>
  <string name="upload_step_4_sub_header">Unless you consent, your contact data will not be uploaded.\n\nIf you consent, your contact data will be uploaded and shared with state or territory health officials for contact tracing purposes.\n\nState and territory health officials will only be able to access information about your close contacts.\n\nRead the COVIDSafe *privacy policy* for further details.</string>
  <string name="upload_step_verify_pin_header">Upload your information</string>
  <string name="upload_step_verify_pin_sub_header">A state or territory health official will send a PIN to your device via text message. Enter it below to upload your information.</string>
  <string name="wrong_ping_number"> Wrong PIN entered</string>
</resources>