<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/keyline_5"
        android:paddingEnd="@dimen/keyline_5">

        <TextView
            android:id="@+id/registration_consent_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_consent_headline"
            android:textAppearance="?textAppearanceHeadline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registration_consent_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:text="@string/registration_consent_content"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceBody1"
            android:textColorLink="@color/hyperlink_enabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_consent_headline" />

        <au.gov.health.covidsafe.ui.view.UlView
            android:id="@+id/registration_consent_first_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_9"
            android:textAppearance="?textAppearanceBody1"
            android:textColorLink="@color/hyperlink_enabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_consent_text"
            app:ul_view_text="@string/registration_consent_first_paragraph" />

        <au.gov.health.covidsafe.ui.view.UlView
            android:id="@+id/registration_consent_second_paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceBody1"
            android:textColorLink="@color/hyperlink_enabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_consent_first_paragraph"
            app:ul_view_text="@string/registration_consent_second_paragraph" />

        <au.gov.health.covidsafe.ui.view.UlView
            android:id="@+id/registration_consent_third_paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceBody1"
            android:textColorLink="@color/hyperlink_enabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_consent_second_paragraph"
            app:ul_view_text="@string/registration_consent_diagnostic" />

        <TextView
            android:id="@+id/registration_consent_call_for_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:text="@string/consent_call_for_action"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceBody1"
            android:textColorLink="@color/hyperlink_enabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_consent_third_paragraph" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>