<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/keyline_5"
        android:paddingEnd="@dimen/keyline_5">

        <TextView
            android:id="@+id/enter_pin_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_6"
            android:gravity="center_vertical|start"
            android:text="@string/enter_pin_headline"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceHeadline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_pin_wrong_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:gravity="center_vertical|start"
            android:text="@string/enter_pin_wrong_number"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColorLink="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pin_headline" />

        <EditText
            android:id="@+id/pin"
            style="@style/otpStyle"
            android:contentDescription="@string/pin_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pin_wrong_number"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_pin_error_label"
            style="?textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_2"
            android:text="@string/wrong_ping_number"
            android:textAlignment="viewStart"
            android:textColor="@color/error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin"
            tools:text="@string/wrong_ping_number"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_pin_timer_label"
            style="?textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_5"
            android:text="@string/enter_pin_timer_expire"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pin_error_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_pin_timer_value"
            style="?textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_0"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/enter_pin_timer_label"
            app:layout_constraintTop_toTopOf="@+id/enter_pin_timer_label"
            tools:text="1:59" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/enter_pin_timer_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="enter_pin_timer_label,enter_pin_timer_value" />

        <TextView
            android:id="@+id/enter_pin_resend_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:gravity="center_vertical|start"
            android:text="@string/enter_pin_resend_pin"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColorLink="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pin_timer_barrier" />

        <TextView
            android:id="@+id/pin_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:gravity="center_vertical|start"
            android:text="@string/ReceivePinIssue"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColorLink="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pin_resend_pin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>