<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_setup_incomplete_permissions_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/error_red"
        android:padding="@dimen/space_16">

        <TextView
            android:id="@+id/permissions_card_title"
            style="@style/fontRobotoRegular20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/inactive_error_image_view"
            android:text="@string/home_header_inactive_title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/inactive_error_image_view"
            android:layout_width="@dimen/active_status_tick_image_size"
            android:layout_height="@dimen/active_status_tick_image_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_red_error" />

    </RelativeLayout>

    <TextView
        android:id="@+id/permissions_card_subtitle"
        style="@style/fontRobotoRegular16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16"
        android:text="@string/home_app_permission_status_subtitle"
        android:textColor="@color/slate_black_1" />

    <FrameLayout
        android:id="@+id/bluetooth_card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_line_grey" />

        <au.gov.health.covidsafe.ui.home.view.PermissionStatusCard
            android:id="@+id/bluetooth_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/home_bluetooth_permission" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/location_card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_line_grey" />

        <au.gov.health.covidsafe.ui.home.view.PermissionStatusCard
            android:id="@+id/location_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/home_location_permission" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/battery_card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_line_grey" />

        <au.gov.health.covidsafe.ui.home.view.PermissionStatusCard
            android:id="@+id/battery_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/home_non_battery_optimization_permission" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/jwt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registration_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/space_16"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_register_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/re_register"
                style="@style/fontRobotoRegular20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textColor="@color/error_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/permission_icon"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/jwt_heading"
                tools:text="Please register again" />

            <TextView
                android:id="@+id/register_body"
                style="@style/fontRobotoRegular16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="@dimen/space_8"
                android:textColor="@color/error_red"
                app:layout_constraintTop_toBottomOf="@id/re_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ic_register_again"
                tools:visibility="visible"
                android:text="@string/jwt_description"
                tools:text="There is an issue with your registration details." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</LinearLayout>